--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,16 @@
     <string name="app_name">Kotlin Messenger Client</string>
 
     <string name="prompt_login">Login</string>
+    <string name="prompt_display_name">Display Name</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="invalid_user_id">Login can not be empty!</string>
     <string name="invalid_password">Password can not be empty!</string>
+    <string name="invalid_display_name">Display name can not be empty!</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="register_failed">"Register failed!"</string>
 
     <string name="title_activity_settings">Settings</string>
     <string name="messenger_header">Messenger</string>
