--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="invalid_display_name">Display name can not be empty!</string>
     <string name="login_failed">"Login failed"</string>
     <string name="register_failed">"Register failed!"</string>
+    <string name="login_after_register_failed">Successfully registred, but login failed!</string>
 
     <string name="title_activity_settings">Settings</string>
     <string name="messenger_header">Messenger</string>
