--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,19 @@
     <string name="prompt_login">Login</string>
     <string name="prompt_display_name">Display Name</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_chatname">Chat Name</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
+    <string name="action_create_chat">Create chat</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="invalid_user_id">Login can not be empty!</string>
     <string name="invalid_password">Password can not be empty!</string>
     <string name="invalid_display_name">Display name can not be empty!</string>
+    <string name="invalid_chat_name">Chat name can not be empty!</string>
     <string name="login_failed">"Login failed"</string>
     <string name="register_failed">"Register failed!"</string>
-    <string name="login_after_register_failed">Successfully registred, but login failed!</string>
+    <string name="login_after_register_failed">Successfully registered, but login failed!</string>
+    <string name="create_chat_failed">Chat creation failed!</string>
 
     <string name="title_activity_settings">Settings</string>
     <string name="messenger_header">Messenger</string>
@@ -31,4 +35,5 @@
     <string name="appearance_header">Appearance</string>
     <string name="no_messages">No messages</string>
     <string name="user_pronoun">You</string>
+    <string name="update_chat_after_creatin_failed">Failed to update chats after successful creation</string>
 </resources>
