Feature/invite to chat (#15)
* WIP

Files created, layouts are done

* Base added, doesn't work

Well, it doesn't fail, it is just "No adapter attached; skipping layout"
I will investigate it tomorrow

* Naruto. List of users to invite appeared.

Search is not available yet. Layout bug is to be fixed.
Everything is soooo slooooow

* Invite doesn't come.

I added some debug prints to investigate
It says that the invite is sent successful
But there are nothing in the other user`s system chat.
That`s bad.

* Invites work

Now you can use it as messenger.

* Temp merge

* Previous push&commit were messed up. Sorry

* Finished, search implemented

Design is awful, search sometimes works really weird and can crush somehow
But it works
And that`s good.

* Use MutableLiveData + minor refactor

* Move users update to invite activity init

Co-authored-by: Alex Kovrigin <a.kovrigin0@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="no_messages">No messages</string>
     <string name="user_pronoun">You</string>
     <string name="update_chat_after_creatin_failed">Failed to update chats after successful creation</string>
+    <string name="enter_user_id_hint">Enter user ID</string>
+    <string name="title_activity_invite">Invite to chat</string>
+    <string name="select_user_to_add_to_chat">Select user to add to chat:</string>
 </resources>
